k8s/bes/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.sw1a1aa.uk`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    certResolver: letsencrypt
